--- a/bos_management/pom.xml
+++ b/bos_management/pom.xml
@@ -83,5 +83,12 @@
             <version>3.11</version>
         </dependency>
 
+        <!-- 导入pingyin4j -->
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
     </dependencies>
 </project>
